[gd_scene load_steps=9 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://Assets/art/shoot_bar.png" type="Texture" id=3]
[ext_resource path="res://Assets/art/hurt_frame.png" type="Texture" id=4]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 4 ), ExtResource( 1 ), ExtResource( 4 ), ExtResource( 1 ), ExtResource( 4 ) ],
"loop": false,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 32, 32 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 25, 28 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 40, 10 )

[node name="Player" type="KinematicBody2D" groups=["player"]]
position = Vector2( 487, 292 )
scale = Vector2( 0.4, 0.4 )
script = ExtResource( 2 )

[node name="AmmoTimer" type="Timer" parent="."]

[node name="InvulnerabilityTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 2.5, -10 )
frames = SubResource( 1 )

[node name="Physics" type="CollisionShape2D" parent="."]
position = Vector2( 2.5, -10 )
shape = SubResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.5, 0.5 )
smoothing_enabled = true

[node name="ShootBar" type="Sprite" parent="."]
visible = false
position = Vector2( 2.5, -50 )
scale = Vector2( 0.05, 0.05 )
texture = ExtResource( 3 )

[node name="Area2D" type="Area2D" parent="."]
modulate = Color( 1, 0, 0, 1 )
self_modulate = Color( 1, 0, 0, 1 )
collision_layer = 4
collision_mask = 6
input_pickable = false

[node name="HurtBox" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 2.5, -10 )
shape = SubResource( 3 )

[node name="BounceBox" type="Area2D" parent="."]
modulate = Color( 0.242188, 1, 0, 1 )
self_modulate = Color( 0.168627, 0.803922, 0.0117647, 1 )
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="BounceBox"]
position = Vector2( 2.5, 20 )
scale = Vector2( 0.999999, 0.999999 )
shape = SubResource( 4 )

[connection signal="timeout" from="AmmoTimer" to="." method="_on_AmmoTimer_timeout"]
[connection signal="timeout" from="InvulnerabilityTimer" to="." method="_on_InvulnerabilityTimer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="area_entered" from="BounceBox" to="." method="_on_BounceBox_area_entered"]
